Ensure sidebar nav expander is readable

--- a/app/style.css
+++ b/app/style.css
@@ -14,6 +14,10 @@
     background-color: rgb(0, 32, 91) ;
 }
 
+[data-testid="stSidebarNavViewButton"]  {
+    color: white
+}
+
 [data-testid="stSidebarNavLink"] span {
     color: white;
     font-family: "Poppins", sans-serif;
